--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,23 @@ server.port=8005
 
 
 spring.banner.location=static/banner/musicapp.txt
+
+security.jwt.key=ZXN0YSBlcyB1bmEgY2xhdmUgbXV5IHNlZ3VyYSAxMjM0NQo=
+security.jwt.expiration=30
+
+
+spring.datasource.url=jdbc:mysql://localhost:3306/appmusic?useSSL=false&serverTimezone=America/Bogota&AllowpublicKeyRetrieval=true
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.generate-ddl=false
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jpa.show-sql=false
+spring.jpa.open-in-view=true
+
+spring.datasource.hikari.pool-name=conexionOyentes
+spring.datasource.hikari.maximum-pool-size=30
+spring.datasource.hikari.connection-timeout=45000
+
